--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
   },
   "devDependencies": {
     "@types/node": "^16.6.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "eslint": "^7.32.0",
-    "eslint-webpack-plugin": "^3.0.1",
+    "cardinal": "^2.1.1",
     "mysql2": "^2.3.0",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
-  }
+  },
+  "dependencies": {}
 }
