--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oxmysql",
   "private": "true",
   "version": "1.0.0",
+  "main": "src/index.ts",
   "description": "FiveM MySQL wrapper using faster mysql2",
   "repository": "git@github.com:overextended/oxmysql.git",
   "author": "dunak-debug <19434539+dunak-debug@users.noreply.github.com>",
@@ -10,15 +11,17 @@
     "start": "webpack --watch --progress",
     "build": "webpack"
   },
+  "dependencies": {
+    "@citizenfx/server": "^2.0.4376-1",
+    "mysql2": "^2.3.0"
+  },
   "devDependencies": {
     "@types/node": "^16.6.1",
     "cardinal": "^2.1.1",
-    "mysql2": "^2.3.0",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {}
+  }
 }
