--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "module": "commonjs"
+    "module": "commonjs",
+    "types": ["@citizenfx/server", "@types/node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
