--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: oxmysql
+description: oxmysql is a database wrapper for FiveM utilising node-mysql2, offering improved performance and security.
