--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ remote_theme: pmarsceill/just-the-docs
 title: oxmysql
 description: oxmysql is a database wrapper for FiveM.
 show_downloads: true
+color_scheme: dark
