--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: oxmysql
 description: oxmysql is a database wrapper for FiveM.
 show_downloads: true
 color_scheme: dark
-logo: "/assets/images/ox.png"
+logo: "https://avatars.githubusercontent.com/u/88127058"
