--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ description: oxmysql is a database wrapper for FiveM.
 show_downloads: true
 color_scheme: dark
 logo: "https://avatars.githubusercontent.com/u/88127058"
-favicon: assets/favicon.ico
+favicon: "assets/favicon.ico"
