--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Bundle files
         run: |
           mv dist oxmysql
-          zip -r oxmysql-${{ env.RELEASE_VERSION }}.zip dist
+          zip -r oxmysql-${{ env.RELEASE_VERSION }}.zip oxmysql
 
       - name: Create Release
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
