--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@citizenfx/server": "^2.0.4376-1",
     "connection-string-parser": "^1.0.4",
+    "github-version-checker": "^2.2.0",
     "mysql2": "^2.3.0",
     "postinstall-postinstall": "^2.1.0"
   },
