--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@citizenfx/server": "^2.0.4793-1",
-    "mysql2": "https://github.com/overextended/node-mysql2.git",
+    "@citizenfx/server": "latest",
+    "mysql2": "^2.3.3",
     "postinstall-postinstall": "^2.1.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^10.0.0",
     "patch-package": "^6.4.7",
-    "typescript": "^4.4.3",
-    "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0"
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   }
 }
