--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,9 @@ jobs:
 
       - name: Bundle files
         run: |
-          mv dist oxmysql
-          zip -r oxmysql-${{ env.RELEASE_VERSION }}.zip oxmysql
+          mkdir -p ./temp/oxmysql
+          cp ./{LICENSE.md,README.md,fxmanifest.lua,lib} ./temp/oxmysql
+          zip -r oxmysql-${{ github.event.inputs.tag }}.zip ./temp/oxmysql
 
       - name: Create Release
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
