--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-spa-router": "^3.2.0"
   }
 }
