update release workflows

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Bundle files
         run: |
           mkdir -p ./temp/oxmysql
-          cp ./{LICENSE.md,README.md,fxmanifest.lua} ./temp/oxmysql
+          cp ./{LICENSE,README.md,fxmanifest.lua} ./temp/oxmysql
           cp -r ./{lib,dist} ./temp/oxmysql
           cd ./temp && zip -r ../oxmysql-${{ github.event.inputs.tag }}.zip ./oxmysql
 
