--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Bundle files
         run: |
           mkdir -p ./temp/oxmysql
-          cp ./{LICENSE.md,README.md,fxmanifest.lua} ./temp/oxmysql
+          cp ./{LICENSE,README.md,fxmanifest.lua} ./temp/oxmysql
           cp -r ./{lib,dist} ./temp/oxmysql
-          cd ./temp && zip -r ../oxmysql-${{ github.event.inputs.tag }}.zip ./oxmysql
+          cd ./temp && zip -r ../oxmysql-${{ env.RELEASE_VERSION }}.zip ./oxmysql
 
       - name: Create Release
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
