--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "oxmysql",
-  "version": "1.0.0",
+  "version": "1.9.0",
   "description": "FXServer to MySQL communication via node-mysql2",
   "repository": "git@github.com:overextended/oxmysql.git",
   "author": "dunak-debug <19434539+dunak-debug@users.noreply.github.com>",
-  "license": "GPL-3.0-or-later",
+  "license": "LGPL-3.0-or-later",
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "esbuild --bundle --platform=node --target=node16.9.1 src/server/index.js --outfile=dist/server/build.js",
-    "watch": "esbuild --watch --bundle --platform=node --target=node16.9.1 src/server/index.js --outfile=dist/server/build.js",
+    "build": "esbuild --bundle --platform=node --target=node16.9.1 src/index.ts --outfile=dist/build.js",
+    "watch": "esbuild --watch --bundle --platform=node --target=node16.9.1 src/index.ts --outfile=dist/build.js",
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@citizenfx/server": "latest",
-    "esbuild": "^0.14.7",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.1.0"
+  },
+  "devDependencies": {
+    "@citizenfx/server": "^2.0.5132-1",
+    "@types/node": "^17.0.4",
+    "esbuild": "^0.14.7",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0"
-  },
-  "devDependencies": {}
+  }
 }
