--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "oxmysql",
-  "version": "1.9.0",
+  "version": "1.0.0",
   "description": "FXServer to MySQL communication via node-mysql2",
   "repository": "git@github.com:overextended/oxmysql.git",
   "author": "dunak-debug <19434539+dunak-debug@users.noreply.github.com>",
   "license": "LGPL-3.0-or-later",
   "type": "module",
-  "private": true,
+  "main": "lib/MySQL.js",
+  "types": "lib/MySQL.d.ts",
+  "files": [
+    "lib/MySQL.js",
+    "lib/MySQL.d.ts"
+  ],
   "scripts": {
     "build": "esbuild --bundle --platform=node --target=node16.9.1 src/index.ts --outfile=dist/build.js",
     "watch": "esbuild --watch --bundle --platform=node --target=node16.9.1 src/index.ts --outfile=dist/build.js",
+    "lib": "tsc --project lib/tsconfig.lib.json",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -21,6 +27,7 @@
     "@types/node": "^17.0.4",
     "esbuild": "^0.14.7",
     "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0"
+    "postinstall-postinstall": "^2.1.0",
+    "typescript": "^4.5.4"
   }
 }
