--- a/ui/package.json
+++ b/ui/package.json
@@ -5,28 +5,22 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.7.3",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
-    "framer-motion": "4",
+    "framer-motion": "4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "typescript": "^4.5.2",
-    "web-vitals": "^2.1.2"
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "start": "cross-env PUBLIC_URL=/ craco start",
     "start:game": "cross-env IN_GAME_DEV=1 craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "build": "craco build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "craco": "^0.0.3",
+    "@craco/craco": "^6.4.3",
     "cross-env": "^7.0.3"
   }
 }
