--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "homepage": "web/build",
+  "name": "ui",
+  "version": "1.0.0",
+  "homepage": "ui/build",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.7.3",
