--- a/ui/package.json
+++ b/ui/package.json
@@ -8,22 +8,25 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@types/node": "^16.11.9",
-    "@types/react": "^17.0.35",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.11.18",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-table": "^7.7.9",
     "framer-motion": "4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "cross-env PUBLIC_URL=/ craco start",
     "start:game": "cross-env IN_GAME_DEV=1 craco start",
-    "build": "craco build"
+    "build": "rimraf build && craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "rimraf": "^3.0.2"
   }
 }
