--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "repository": "git@github.com:overextended/oxmysql.git",
   "author": "dunak-debug <19434539+dunak-debug@users.noreply.github.com>",
   "license": "LGPL-3.0-or-later",
-  "type": "module",
   "main": "lib/MySQL.js",
   "types": "lib/MySQL.d.ts",
   "files": [
@@ -16,18 +15,24 @@
     "build": "esbuild --bundle --platform=node --target=node16.9.1 src/index.ts --outfile=dist/build.js",
     "watch": "esbuild --watch --bundle --platform=node --target=node16.9.1 src/index.ts --outfile=dist/build.js",
     "lib": "tsc --project lib/tsconfig.lib.json",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@citizenfx/server": "^2.0.5132-1",
     "@types/node": "^17.0.4",
     "mysql2": "^2.3.3",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "prettier": "^2.5.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
     "esbuild": "^0.14.7",
+    "husky": "^7.0.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.5.4"
   }
 }
