--- a/ui/package.json
+++ b/ui/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "victory": "^36.2.0"
   },
   "scripts": {
     "start": "cross-env PUBLIC_URL=/ craco start",
