--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@citizenfx/server": "^2.0.5132-1",
     "@types/node": "^17.0.4",
     "mysql2": "^2.3.3",
+    "named-placeholders": "^1.1.2",
     "node-fetch": "^3.2.1",
     "prettier": "^2.5.1"
   },
   "devDependencies": {
+    "@tellus/patch-package-with-pnpm-support": "github:Tellus/patch-package-with-pnpm-support",
     "esbuild": "^0.14.23",
-    "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "pretty-quick": "^3.1.3",
     "typescript": "^4.6.2"
