--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -32,10 +32,12 @@ jobs:
         run: |
           mkdir -p ./temp/oxmysql
           mkdir -p ./temp/oxmysql/ui/
+          mkdir -p ./temp/oxmysql/lib/
           cp ./{LICENSE,README.md,fxmanifest.lua,ui.lua} ./temp/oxmysql
-          cp -r ./{lib,dist} ./temp/oxmysql
+          cp ./lib/{MySQL.lua,define.lua} ./temp/oxmysql/lib
+          cp -r ./dist ./temp/oxmysql
           cp -r ./ui/build ./temp/oxmysql/ui/
-          cd ./temp && zip -r ../oxmysql-${{ github.event.inputs.tag }}.zip ./oxmysql
+          cd ./temp && zip -r ../oxmysql.zip ./oxmysql
 
       - name: Create Release
         uses: 'marvinpinto/action-automatic-releases@v1.2.1'
