--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "postinstall": "patch-package && pnpm bootstrap"
   },
   "dependencies": {
-    "@citizenfx/server": "^2.0.5132-1",
+    "@citizenfx/server": "2.0.5132-1",
     "@milahu/patch-package": "^6.4.14",
     "@types/node": "^17.0.45",
-    "mysql2": "^2.3.3",
-    "named-placeholders": "^1.1.2",
-    "node-fetch": "^3.2.10",
-    "prettier": "^2.7.1"
+    "mysql2": "^3.0.1",
+    "named-placeholders": "^1.1.3",
+    "node-fetch": "^3.3.0",
+    "prettier": "^2.8.3"
   },
   "devDependencies": {
     "esbuild": "^0.14.54",
     "lerna": "^4.0.0",
     "postinstall-postinstall": "^2.1.0",
     "pretty-quick": "^3.1.3",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.4"
   }
 }
