refactor(web): initial svelte rewrite files

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# JetBrains
+.idea
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
