--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mysql2": "^3.2.0",
     "named-placeholders": "^1.1.3",
     "node-fetch": "^3.3.0",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "svelte-spa-router": "^3.3.0"
   },
   "devDependencies": {
     "esbuild": "^0.14.54",
