--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
     "prettier-plugin-tailwindcss": "^0.2.5",
+    "svelte-headless-table": "^0.17.2",
     "tailwindcss": "^3.2.7",
     "tinro": "^0.6.12"
   }
