refactor(web): manual sorting

--- a/web/package.json
+++ b/web/package.json
@@ -21,12 +21,12 @@
   },
   "dependencies": {
     "@tabler/icons-svelte": "^2.10.0",
+    "@tanstack/svelte-table": "^8.8.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
     "prettier-plugin-tailwindcss": "^0.2.5",
-    "svelte-headless-table": "^0.17.2",
     "tailwindcss": "^3.2.7",
     "tinro": "^0.6.12"
   }
