--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,8 @@
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
     "prettier-plugin-tailwindcss": "^0.2.5",
+    "svelte-floating-ui": "^1.5.2",
+    "svelte-portal": "^2.2.0",
     "tailwindcss": "^3.2.7",
     "tinro": "^0.6.12"
   }
