--- a/web/package.json
+++ b/web/package.json
@@ -23,10 +23,12 @@
     "@tabler/icons-svelte": "^2.10.0",
     "@tanstack/svelte-table": "^8.8.0",
     "autoprefixer": "^10.4.14",
+    "chart.js": "^4.2.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
     "prettier-plugin-tailwindcss": "^0.2.5",
+    "svelte-chartjs": "^3.1.2",
     "svelte-floating-ui": "^1.5.2",
     "svelte-portal": "^2.2.0",
     "tailwindcss": "^3.2.7",
