--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "watch": "esbuild --watch --bundle --platform=node --target=node16.9.1 src/index.ts --outfile=dist/build.js",
     "lib": "tsc --project lib/tsconfig.lib.json",
     "bootstrap": "lerna bootstrap",
-    "postinstall": "patch-package && pnpm bootstrap"
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@citizenfx/server": "2.0.5132-1",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "esbuild": "^0.14.54",
-    "lerna": "^4.0.0",
+    "lerna": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "pretty-quick": "^3.1.3",
     "typescript": "^4.9.5"
