ci(release): correct commit message
🤞I'm bad at this.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git commit -am '${{ env.RELEASE_VERSION }}'
+          git commit -am '${{ github.ref_name }}'
 
       - name: Bundle files
         run: |
