--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,18 +38,20 @@ jobs:
           cache-dependency-path: 'pnpm-lock.yaml'
 
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm i --frozen-lockfile
 
       - name: Run build
         run: pnpm build
         env:
           TGT_RELEASE_VERSION: ${{ github.ref_name }}
 
-      - name: Commit update
+      - name: Update repository
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add .
           git commit -am '${{ github.ref_name }}'
+          git push
 
       - name: Bundle files
         run: |
