--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@citizenfx/server": "2.0.5132-1",
     "@milahu/patch-package": "^6.4.14",
     "@types/node": "^17.0.45",
-    "mysql2": "^3.5.1",
+    "mysql2": "3.5.1",
     "named-placeholders": "^1.1.3",
     "node-fetch": "^3.3.1",
     "prettier": "^2.8.8"
