refactor(database): add new connection class and misc tweaks
Use disposable symbol to ensure connection cleanup.
Improvements to internal types.
Code splitting and removal of redundant variables.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": true,
     "module": "es2020",
     "target": "es2021",
-    "lib": ["es2021"],
+    "lib": ["es2021", "esnext.disposable"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noEmit": true,
