feat(logger): add fivemanage logging service

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,12 +57,10 @@ jobs:
 
       - name: Bundle files
         run: |
-          mkdir -p ./temp/oxmysql
-          mkdir -p ./temp/oxmysql/web/
-          mkdir -p ./temp/oxmysql/lib/
+          mkdir -p ./temp/oxmysql/{web,lib}
           cp ./{LICENSE,README.md,fxmanifest.lua,ui.lua} ./temp/oxmysql
           cp ./lib/MySQL.lua ./temp/oxmysql/lib
-          cp -r ./dist ./temp/oxmysql
+          cp -r ./dist ./logger ./temp/oxmysql
           cp -r ./web/build ./temp/oxmysql/web/
           cd ./temp && zip -r ../oxmysql.zip ./oxmysql
 
