--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "postinstall": "patch-package && pnpm bootstrap"
   },
   "dependencies": {
-    "@milahu/patch-package": "^6.4.14",
-    "mysql2": "3.11.0",
+    "mysql2": "3.11.3",
     "named-placeholders": "^1.1.3",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@citizenfx/server": "2.0.5132-1",
+    "@citizenfx/server": "2.0.10072",
+    "@milahu/patch-package": "^6.4.14",
     "@types/node": "^17.0.45",
     "esbuild": "^0.21.5",
     "lerna": "^4.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "pretty-quick": "^3.3.1",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   }
 }
