--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@citizenfx/server": "2.0.10072",
+    "@citizenfx/server": "2.0.5132-1",
     "@milahu/patch-package": "^6.4.14",
     "@types/node": "^17.0.45",
     "esbuild": "^0.21.5",
